--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,18 +7,15 @@
 
     </div>
     <div class='flex-none flex flex-row items-stretch justify-end space-x-10'>
-      <div class='h-full'>
-        <%= link_to "Public", 'javascript:;', class: 'text-sm grid place-items-center text-blue-500 font-bold box-border h-full' %>
-      </div>
-      <div class='h-full'>
-        <%= link_to "Privite", 'javascript:;', class: 'text-sm grid place-items-center text-gray-700 box-border h-full' %>
-      </div>
-      <div class='h-full'>
-        <%= link_to "History", 'javascript:;', class: 'text-sm grid place-items-center text-gray-700 box-border h-full' %>
-      </div>
-      <div class='p-2 border border-gray-700 rounded-full w-8 h-8 grid place-items-center cursor-pointer self-center'>
-        <i class="fas fa-user"></i>
-      </div>
+      <% if user_signed_in? %>
+        <div class='h-full'>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'text-sm grid place-items-center text-gray-700 box-border h-full' %>
+        </div>
+      <% else %>
+        <div class='h-full'>
+          <%= link_to "Sign In", new_user_session_path, class: 'text-sm grid place-items-center text-gray-700 box-border h-full' %>
+        </div>
+      <% end %>
     </div>
   </div>
 </header>
