Add root url to logo

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class='w-screen h-14 bg-white'>
   <div class='w-5/6 mx-auto h-full flex flex-row justify-between items-stretch'>
     <div class='font-bold flex-none self-center text-lg'>
-      RUKU
+      <%= link_to 'RUKU', root_path %>
     </div>
     <div class='flex-auto'>
 
