--- a/app/views/chat_rooms/index.html.erb
+++ b/app/views/chat_rooms/index.html.erb
@@ -1,7 +1,11 @@
+<%= turbo_stream_from [:chat_rooms, current_user.id] %>
+
 <div class='w-screen h-screen'>
   <div class='flex flex-row items-stretch h-full divide-x divide-gray-200'>
     <div class='flex-none w-1/4 h-full'>
-      <%= render @chat_rooms %>
+      <%= turbo_frame_tag :room_list do %>
+        <%= render @chat_rooms %>
+      <% end %>
     </div>
     <div class='flex-auto'></div>
   </div>
