--- a/app/views/chat_rooms/index.html.erb
+++ b/app/views/chat_rooms/index.html.erb
@@ -5,7 +5,7 @@
     <div class='flex-none w-1/4 h-full'>
       <%= render 'form', new_chat_room: @new_chat_room, user: current_user %>
       <%= turbo_frame_tag :room_list do %>
-        <%= render @chat_rooms %>
+        <%= render @chat_rooms, user: current_user %>
       <% end %>
     </div>
     <div class='flex-auto'></div>
