--- a/app/views/messages/_other_user_message.html.erb
+++ b/app/views/messages/_other_user_message.html.erb
@@ -1,4 +1,7 @@
 <div class='px-2 flex flex-row items-center space-x-1 my-1' id="<%= dom_id(message) %>">
+  <div class='flex-none'>
+    <div class='w-8 h-8 rounded-full bg-gray-300'></div>
+  </div>
   <div class="py-1 px-2 text-sm rounded-2xl text-white bg-gray-500">
     <%= message.body %>
   </div>
