--- a/app/views/chat_rooms/index.html.erb
+++ b/app/views/chat_rooms/index.html.erb
@@ -5,21 +5,52 @@
   <%= turbo_stream_from [:chat_room, chat_room_user.chat_room_id, :user, current_user.id] %>
 <% end %>
 
-<div class='w-screen h-screen flex flex-row items-stretch divide-x divide-gray-200'>
-  <div class='flex-none w-1/4'>
-    <%= turbo_frame_tag :room_list do %>
-      <%= render @chat_rooms, user: current_user %>
-    <% end %>
+<div class='w-screen h-screen flex flex-row items-stretch divide-x divide-gray-200' data-controller="chats">
+  <div class='flex-none w-1/4 flex flex-col items-stretch'>
+    <div class='flex-none flex flex-row items-center justify-between px-4 py-2'>
+      <div class='font-bold text-2xl'>Chats</div>
+      <div class='flex-none flex flex-row items-center space-x-2'>
+        <div class='w-10 h-10 rounded-full bg-gray-200 cursor-pointer hover:bg-gray-300 grid place-items-center'>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+          </svg>
+        </div>
+      </div>
+    </div>
+
+    <div class='flex-none flex flex-row items-center px-4'>
+      <div class='flex-none'></div>
+      <div class='flex-auto'>
+        <div class='rounded-3xl bg-gray-200 h-9 flex flex-row items-center px-2 space-x-2'>
+          <div class='flex-none text-gray-400'>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+          </div>
+          <div class='flex-auto'>
+            <input type="text" class='w-full bg-transparent ring-0 focus:ring-0 border-0 p-0' placeholder='Search Messager'>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class='flex-auto relative'>
+      <div class='absolute top-0 left-0 w-full h-full overflow-auto py-2'>
+        <%= turbo_frame_tag :room_list do %>
+          <%= render @chat_rooms, user: current_user %>
+        <% end %>
+      </div>
+    </div>
   </div>
   <div class='flex-auto flex flex-row items-stretch'>
-    <div class='flex-auto flex flex-col items-stretch divide-y divide-gray-200'>
+    <div class='flex-auto flex flex-col items-stretch'>
       <div class='flex-none h-12'>
         <%= turbo_frame_tag :chat_room %>
       </div>
       <div class='flex-auto relative'>
         <%= turbo_frame_tag :chat_room_messages %>
       </div>
-      <div class='flex-none h-12'>
+      <div class='flex-none h-12 relative'>
         <%= turbo_frame_tag :input_message_body %>
       </div>
     </div>
