Add shadow to header

--- a/app/views/chat_rooms/index.html.erb
+++ b/app/views/chat_rooms/index.html.erb
@@ -44,7 +44,7 @@
   </div>
   <div class='flex-auto flex flex-row items-stretch'>
     <div class='flex-auto flex flex-col items-stretch'>
-      <div class='flex-none h-12'>
+      <div class='flex-none h-12 shadow-md'>
         <%= turbo_frame_tag :chat_room %>
       </div>
       <div class='flex-auto relative'>
