--- a/app/views/chat_rooms/_messages.erb
+++ b/app/views/chat_rooms/_messages.erb
@@ -1,4 +1,8 @@
 <div class='flex flex-col-reverse absolute top-0 left-0 w-full h-full overflow-auto' data-controller='chat-messages' data-action="scroll->chat-messages#scroll">
   <%= turbo_frame_tag :new_messages %>
   <%= render messages %>
+  <div data-chat-messages-target='insertPoint'></div>
+  <div class='hidden' data-chat-messages-target='pagination'>
+    <%= paginate messages %>
+  </div>
 </div>
